--- a/src/Styles/AboutUs.css
+++ b/src/Styles/AboutUs.css
@@ -11,7 +11,6 @@ body {
   width: 100vw;
   min-height: 100vh;
   background: linear-gradient(to right, #007bff, #6610f2);
-  /* padding: 60px 0px; */
   color: white;
   display: flex;
   align-items: center;
@@ -19,7 +18,10 @@ body {
   text-align: center;
   flex-direction: column;
   box-sizing: border-box;
+  position: relative; /* Add this to make absolute positioning work */
+  padding-bottom: 60px; /* Add some padding to make room for the slider */
 }
+
 
 /* Hero Content */
 .container {
@@ -45,11 +47,13 @@ body {
 .about-hero-subtitle {
   font-size: 1.5rem;
   margin-top: 10px;
+  color: white;
 }
 
 .description {
   font-size: 1rem;
   margin-top: 10px;
+  color: white;
 }
 
 .about-hero-button {
@@ -81,9 +85,10 @@ body {
   width: 100%;
   overflow: hidden;
   background: rgba(255, 255, 255, 0.1);
-  position: relative;
   padding: 10px 0;
-  margin-top: 20px;
+  position: absolute; /* Change to absolute positioning */
+  bottom: 0; /* Position at the bottom */
+  left: 0; /* Align to the left edge */
 }
 
 .slider-track {
@@ -149,7 +154,7 @@ body {
 }
 
 .main {
-  width: 80%;
+  width: 85%;
   margin: auto;
 }
 
@@ -221,3 +226,49 @@ body {
       font-size: 30px;
   }
 }
+
+
+
+
+/* go perfect */
+
+
+.yourPerfect{
+  margin-top: 100px;
+ 
+}
+
+.yourPerfect h1{
+  font-weight: 600;
+  font-family: sans-serif;
+  font-size: 45px;
+}
+@media (max-width: 768px) {
+  
+.yourPerfect h1{
+
+  font-size: 25px;
+}
+
+}
+
+
+.subtext{
+  font-size: 14px;
+  font-family: sans-serif;
+color: #00004099;
+width: 55%;
+margin-bottom: 24px;
+font-weight: 500;
+}
+
+.yourPerfect img{
+  width: 100%;
+  margin-top: 20px;
+}
+
+
+
+
+
+
