--- a/src/Styles/AboutUs.css
+++ b/src/Styles/AboutUs.css
@@ -440,6 +440,17 @@ body {
 
 
 
+/* animation video */
+
+.fullscreen-video {
+  /* position: fixed;
+  top: 0;
+  left: 0; */
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover; /* Ensures the video covers the entire area */
+  z-index: -1; /* Places video behind other content */
+}
 
 
 
