--- a/src/Styles/timeline.css
+++ b/src/Styles/timeline.css
@@ -18,11 +18,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 500px;
+  justify-content: flex-start;
+  height: 100vh;
   background: rgba(255, 255, 255, 0.1);
   padding: 20px;
   border-radius: 15px;
+  top: 100px;
 }
 
 .timeline-step {
